--- a/templates/index.html
+++ b/templates/index.html
@@ -13,11 +13,6 @@
     <header class="p-3 text-bg-dark">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                    <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
-                        <use xlink:href="#bootstrap"></use>
-                    </svg>
-                </a>
 
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <h4>Pothole Detection</h4>
@@ -34,12 +29,13 @@
         </div>
     </header>
     <div class="container-fluid">
+
         <div class="row">
             <div class="col-8">
                 <div class="card mt-2">
                     <div class="card-body">
                         <div class="p-2">
-                            <img src="{{url_for('static', filename='image/download.png')}}" class="img-fluid" alt="...">
+                            <img id="show_img" src="static/image/1674324690.8264375.png" class="img-fluid" alt="...">
                         </div>
 
                     </div>
@@ -47,92 +43,14 @@
 
             </div>
 
-            <div class="col-4">
-
-                <div class="card mt-2">
-                    <div class="card-body">
-                        <div class="p-2">
+            <div class="col-4 mt-2">
+                <div class="p-2" id="updates">
 
 
-                            <div class="card">
-                                <div class="card-header">
-                                    Pothole 1
-                                </div>
-                                <div class="card-body ">
-                                    <div class="row mt-2">
-                                        <div class="col-6">
-                                            <h6 class="my-0">width</h6>
-                                        </div>
-                                        <div class="col-6">
-                                            <h6 class="my-0">12 Cm</h6>
-                                        </div>
-                                    </div>
-
-                                    <div class="row mt-2">
-                                        <div class="col-6">
-                                            <h6 class="my-0">Height</h6>
-                                        </div>
-                                        <div class="col-6">
-                                            <h6 class="my-0">50 Cm</h6>
-                                        </div>
-                                    </div>
-
-
-                                    <div class="row mt-2">
-                                        <div class="col-6">
-                                            <h6 class="my-0">Depth</h6>
-                                        </div>
-                                        <div class="col-6">
-                                            <h6 class="my-0">12 Cm</h6>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-
-                            <div class="card pt-5">
-                                <div class="card-header">
-                                    Pothole 2
-                                </div>
-                                <div class="card-body ">
-                                    <div class="row mt-2">
-                                        <div class="col-6">
-                                            <h6 class="my-0">width</h6>
-                                        </div>
-                                        <div class="col-6">
-                                            <h6 class="my-0">12 Cm</h6>
-                                        </div>
-                                    </div>
-
-                                    <div class="row mt-2">
-                                        <div class="col-6">
-                                            <h6 class="my-0">Height</h6>
-                                        </div>
-                                        <div class="col-6">
-                                            <h6 class="my-0">50 Cm</h6>
-                                        </div>
-                                    </div>
-
-
-                                    <div class="row mt-2">
-                                        <div class="col-6">
-                                            <h6 class="my-0">Depth</h6>
-                                        </div>
-                                        <div class="col-6">
-                                            <h6 class="my-0">12 Cm</h6>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-
-                    </div>
                 </div>
-
-
             </div>
         </div>
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
@@ -148,20 +66,128 @@
             $.ajax({
                 url: 'upload',
                 type: 'post',
-                data:data,
+                data: data,
                 contentType: false,
                 processData: false,
-                success: function (response) {
-                    if (response != 0) {
-                        $("#img").attr("src", response);
-                        $(".preview img").show(); // Display image element
-                    } else {
-                        alert('file not uploaded');
+                success: function (resp) {
+                    var ele = ''
+                    $('#show_img').attr('src', resp['output'])
+
+                    for (var i = 0; i < resp['res'].length; i++) {
+                        res = resp['res'][i];
+                        console.log(res, "........")
+
+                        ele += `<div class="card">
+                            <h5 class="card-header text-center">
+                                ${res['name']}
+                            </h5>
+                            
+                            <div class="card-body">
+                                <div class="row mt-2">
+                                    <div class="col-6">
+                                        <h5 class="my-0 font-weight-bold">Confidence</h5>
+                                    </div>
+                                    <div class="col-6">
+                                        <h5 class="my-0">${res['confidence']}</h5>
+                                    </div>                                                                              
+                                </div>
+                            </div>
+
+
+                            <div class="card-body ">
+                                <div class="row mt-2">                                        
+                                    <div class="col-6">
+                                        <h5 class="my-0">Depth</h5>
+                                    </div>
+                                    <div class="col-6">
+                                        <h5 class="my-0">${res['depth']} CM</h5>
+                                    </div>                                                                                
+                                </div>
+                            </div>
+
+
+                            <div class="card-body ">
+                                <div class="row mt-2">                                      
+                                    <div class="col-6">
+                                        <h5 class="my-0">Height</h5>
+                                    </div>
+                                    <div class="col-6">
+                                        <h5 class="my-0">${res['height']} CM</h5>
+                                    </div>                                                                               
+                                </div>
+
+                            </div>
+
+
+            
+                            <div class="card-body ">
+                                <div class="row mt-2">
+                                    <div class="col-6">
+                                        <h5 class="my-0">Width</h5>
+                                    </div>
+                                    <div class="col-6">
+                                        <h5 class="my-0">${res['width']} CM</h5>
+                                    </div>                                        
+                                </div>
+                            </div>                                
+                        </div>`
+
+                        
+
+
                     }
+
+                    $('#updates').html(ele)
                 },
             });
         })
 
+        var res = {
+            "output": "static/output/1674323148.8276992.png",
+            "res": [{
+                    "confidence": 0.65,
+                    "depth": 71.95,
+                    "height": 58.94,
+                    "name": "Pothole 1",
+                    "width": 144.31
+                },
+                {
+                    "confidence": 0.51,
+                    "depth": 43.9,
+                    "height": 15.45,
+                    "name": "Pothole 2",
+                    "width": 87.8
+                },
+                {
+                    "confidence": 0.46,
+                    "depth": 21.14,
+                    "height": 8.13,
+                    "name": "Pothole 3",
+                    "width": 42.68
+                },
+                {
+                    "confidence": 0.44,
+                    "depth": 32.93,
+                    "height": 13.01,
+                    "name": "Pothole 4",
+                    "width": 66.26
+                },
+                {
+                    "confidence": 0.32,
+                    "depth": 23.98,
+                    "height": 11.38,
+                    "name": "Pothole 5",
+                    "width": 48.37
+                },
+                {
+                    "confidence": 0.31,
+                    "depth": 15.85,
+                    "height": 17.48,
+                    "name": "Pothole 6",
+                    "width": 32.11
+                }
+            ]
+        }
     </script>
 </body>
 
